# vico

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
apps/backend_api/: smoke.py
apps/backend_api/tests/: test_smoke.py
apps/web/: .eslintrc.json  .prettierrc  package-lock.json  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/layout/Navbar/: Navbar.tsx  NavbarActions.tsx  NavbarHamburger.tsx  NavbarSearch.tsx  useNavbarSearch.ts
apps/web/src/components/layout/Sidebar/: Sidebar.tsx
apps/web/src/components/layout/Sidebar/SidebarNav/: SidebarNav.tsx
apps/web/src/components/layout/Sidebar/SidebarSort/: SidebarSort.tsx
apps/web/src/components/ui/Badge/: Badge.tsx
apps/web/src/components/ui/Button/: Button.tsx
apps/web/src/components/ui/CollectionCard/: CollectionCard.tsx  CollectionCardBody.tsx  CollectionCardExtension.tsx  CollectionCardFooter.tsx  CollectionCardHeader.tsx  CollectionCardThumbnail.tsx
apps/web/src/components/ui/Logo/: Logo.tsx
apps/web/src/components/ui/NavLink/: NavLink.tsx
apps/web/src/components/ui/SearchInput/: SearchInput.tsx
apps/web/src/config/: index.ts
apps/web/src/context/: SideBarContext.tsx
apps/web/src/data/collections/: collections.ts
apps/web/src/data/mock/collections/: collections.ts
apps/web/src/lib/: utils.test.ts  utils.ts
apps/web/src/styles/: colors.css  globals.css  token.css
apps/web/src/types/: collection.ts
docs/: anforderungen.md  initialisierung.md  machbarkeitsanalyse.md  projekt initialisierung.md
docs/anforderungen/: yt_connector.md
docs/anforderungen/sync_service/: control_plane.md  data_plane.md  yt_connector.md
docs/assets/: architektur_proto.excalidraw  erd_proto.excalidraw  ui_konzept.scrvn
docs/db/: config.dbml  control.dbml  vico.dbml
docs/konzepte/: Vico - Erster Entwurf.fig  architektur_proto.excalidraw
docs/konzepte/ui/: Vico - Erster Entwurf.fig
scripts/: get_yt_videodata.py  setup_empty_folders.py
