[project]
name = "vico"
version = "0.1.0"
description = "Vico (VideoCollections) ist eine Kurationsplattform für Videos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
exclude = [".venv", ".git"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle: classic PEP8 Errors
    "W", # pycodestyle warnings: trailing whitespace, whitespace-only blank lines, ...
    "F", # Pyflakes: unused imports and vars; undefined or double definitions
    "UP", # pyupgrade: modernized patterns (i.e. f-strings instead of .format())
    "B", # flake8-bugbear: prevent typical pitfalls
    "SIM", # flake8-simplify: simplification of code; reducing boilerplate
    "I" # isort: import sort
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto" # Newline style, normalize mixed endings

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true # human readable shell output 
show_error_codes = true
files = ["."]
exclude = [
  '^\.venv/',
  '^build/',
  '^dist/',
]